smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/maps/map-unclosed-parameters1.smithy
// Syntax error at line 4, column 1: Expected RBRACE('}') but found EOF | Model
namespace com.foo
map MyMap {
